--- a/index.html
+++ b/index.html
@@ -2,8 +2,15 @@
 <html lang="en">
   <title>Salmon WebView</title>
   <h1>Salmon WebView</h1>
-  <p>Salmon is SeafoodStudios' very own browser!</p>
-  <p>REMEMBER TO READ THE INSTRUCTIONS FIRST!</p>
+  <p>Salmon is SeafoodStudios' very own working browser!</p>
   <p>Download it here:</p>
   <a href="https://drive.google.com/drive/folders/1ZdyvQ38paezftEOMObbA1PQEOBEd6hcU">Salmon WebView Download Page</a>
+  <h1>Salmon WebView Useful Links</h1>
+  <p>Salmon WebView can open most links, but some work better than others.</p>
+  <p>Here is a list of 100% working links for Salmon WebView!</p>
+  <a href="https://swisscows.com">Swisscows Search Engine</a>
+  <a href="https://www.wikipedia.org/">Wikipedia Encyclopedia</a>
+  <a href="https://www.cbsnews.com/">CBS News</a>
+  
+  
   
