--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <h1>Salmon WebView</h1>
   <p>Salmon is SeafoodStudios' very own working browser!</p>
   <p>Download it here:</p>
-  <a href="https://drive.google.com/drive/folders/1X0NSFB3PwwobV3dod-HMk8nORguABpAm?usp=drive_link">Salmon WebView Download Page</a>
+  <a href="https://drive.google.com/drive/folders/1nVFkl32qzMP7GAGRqRopClaHKPvpX4gs?usp=sharing">Salmon WebView Download Page</a>
   <h1>Salmon WebView Useful Links</h1>
   <p>Salmon WebView can open most links, but some work better than others.</p>
   <p>Here is a list of 100% working links for Salmon WebView!</p>
